<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb">

    <RelativeLayout
        android:id="@+id/msgRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_layout" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/msgLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:background="#AAAAAA" />

        <LinearLayout
            android:id="@+id/chatInputLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/base_scrollview_top_height"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <Button
                android:id="@+id/chatNewVoice"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_chat_voice_selector"
                android:gravity="center"
                android:textColor="@color/base_color_text_black"
                android:visibility="visible" />

            <Button
                android:id="@+id/chatNewkeyboard"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_chat_keyboard_selector"
                android:gravity="center"
                android:textColor="@color/base_color_text_black"
                android:visibility="gone" />

            <com.huang.utils.voice.VoiceRecorderButton
                android:id="@+id/btn_recorder"
                style="@style/Smile_TextView_Black"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_chat_record_selector"
                android:gravity="center"
                android:text="@string/longclick_speak"
                android:visibility="gone" />

            <EditText
                android:id="@+id/chatNewEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1.0"
                android:background="@drawable/base_edit_input"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/tab_padding_left_right"
                android:padding="5dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/chatAddButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_chat_add_selector"
                android:gravity="center" />

            <Button
                android:id="@+id/chatNewSend"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:background="@drawable/message_send_btn"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="#FFFFFF"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:background="#AAAAAA" />

        <LinearLayout
            android:id="@+id/chatLinearLayout_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="4">

            <TextView
                android:id="@+id/chatNewPrescriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/btn_chat_add_pre_selector"
                android:gravity="center"
                android:text="@string/prescription"
                android:textColor="#888888" />

            <TextView
                android:id="@+id/chatNewPictureTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/btn_chat_add_picture_selector"
                android:gravity="center"
                android:text="@string/picture"
                android:textColor="#888888" />

            <TextView
                android:id="@+id/chatNewCollectTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/btn_chat_add_camera_selector"
                android:gravity="center"
                android:text="@string/camera"
                android:textColor="#888888" />

            <TextView
                android:id="@+id/chatNewArticleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/btn_chat_add_location_selector"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="#888888" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/msgLinearLayout"
        android:layout_below="@id/msgRelativeLayout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chatNewListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>